# Automatic_Number_Plate_Recognition_YOLO_OCR

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  KVKK_AYDINLATMA_METNI.md  LICENSE  Makefile  README.md  SECURITY.md  app.py  docker-compose.yml  main.py  ocr_results.csv  pyproject.toml  requirements.txt
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  codeql.yml  publish.yml
ai/: ai_model.py  ocr_model.py
helper/: general_utils.py  params.py
legacy/: app.py  main.py  requirements.txt
legacy/ai/: ai_model.py  ocr_model.py
legacy/data/: coco128.yaml
legacy/models/: experimental.py  yolo.py
legacy/static/: style.css
legacy/utils/: activations.py  augmentations.py  autoanchor.py  autobatch.py  benchmarks.py  callbacks.py  datasets.py  downloads.py  helper.py  plots.py  torch_utils.py  visual_utils.py
legacy/utils/flask_rest_api/: restapi.py
legacy/utils/google_app_engine/: additional_requirements.txt
legacy/utils/loggers/wandb/: wandb_utils.py
models/: common.py  tf.py
plate_dataset/labels/train/: Cars0.txt  Cars101.txt  Cars105.txt  Cars106.txt  Cars109.txt  Cars110.txt  Cars111.txt  Cars112.txt  Cars113.txt  Cars115.txt  Cars116.txt  Cars118.txt  Cars119.txt  Cars12.txt  Cars121.txt  Cars122.txt  Cars125.txt  Cars128.txt  Cars129.txt  Cars130.txt  Cars134.txt  Cars135.txt  Cars138.txt  Cars14.txt  Cars140.txt  Cars144.txt  Cars145.txt  Cars147.txt  Cars150.txt  Cars153.txt  Cars155.txt  Cars156.txt  Cars158.txt  Cars159.txt  Cars160.txt  Cars163.txt  Cars164.txt  Cars166.txt  Cars19.txt  Cars23.txt  (+38 more)
plate_dataset/labels/val/: Cars1.txt  Cars102.txt  Cars103.txt  Cars104.txt  Cars107.txt  Cars108.txt  Cars11.txt  Cars117.txt  Cars120.txt  Cars123.txt  Cars126.txt  Cars127.txt  Cars132.txt  Cars133.txt  Cars136.txt  Cars137.txt  Cars139.txt  Cars142.txt  Cars143.txt  Cars152.txt  Cars154.txt  Cars161.txt  Cars165.txt  Cars167.txt  Cars18.txt  Cars22.txt  Cars24.txt  Cars25.txt  Cars27.txt  Cars36.txt  Cars37.txt  Cars4.txt  Cars42.txt  Cars43.txt  Cars46.txt  Cars48.txt  Cars50.txt  Cars55.txt  Cars57.txt  Cars58.txt  (+12 more)
scripts/: benchmark.py  export_ultralytics_to_onnx.py
src/anpr/: __init__.py  cli.py  config.py  logging.py  observability.py  pipeline.py
src/anpr/api/: __init__.py  app.py  deps.py  middleware.py
src/anpr/api/routes/: detections.py  health.py  infer.py  stream.py
src/anpr/api/static/: style.css
src/anpr/api/templates/: index.html
src/anpr/detector/: __init__.py  base.py  fast_alpr.py
src/anpr/ocr/: __init__.py  base.py  fast_plate.py
src/anpr/postprocess/: __init__.py  confusion.py  dewarp.py  temporal.py  turkish.py
src/anpr/storage/: __init__.py  hashing.py  models.py  repository.py
src/anpr/tracker/: __init__.py  iou.py
templates/: index.html
tests/: conftest.py
tests/integration/: test_api_smoke.py  test_infer_response_shape.py  test_metrics.py  test_pipeline_real.py  test_pipeline_smoke.py  test_storage.py
tests/unit/: test_confusion.py  test_hashing.py  test_iou_tracker.py  test_temporal.py  test_turkish.py  test_turkish_property.py
utils/: __init__.py  general.py  helper.py  loss.py  metrics.py  params.py  visual_utils.py
utils/loggers/: __init__.py
